src/input/css/styles/breeze/button.css
/*
 * SPDX-License-Identifier: BSD-2-Clause
 * SPDX-FileCopyrightText: 2025 Arjen Hiemstra <ahiemstra@heimr.nl>
 */

/*
 * Buttons and button-like controls.
 */

:root {
    --button-active-text-color: custom-color("kcolorscheme", "active", "button", "foreground", "text");
    --button-active-background-color: custom-color("kcolorscheme", "active", "button", "background", "normal");
    --button-active-border-color: custom-color("kcolorscheme", "active", "button", "decoration", "frame");
    --button-active-highlight-color: mix(var(--button-active-background-color), var(--highlight-color), 0.333);
    --button-active-border-highlight-color: var(--highlight-color);
    --button-active-checked-color: mix(var(--button-active-background-color), var(--button-active-text-color), 0.125);
    --button-active-focus-color: modify-color(custom-color("kcolorscheme", "active", "button", "decoration", "focus") set-alpha var(--focus-outline-alpha));

    --button-inactive-text-color: custom-color("kcolorscheme", "inactive", "button", "foreground", "text");
    --button-inactive-background-color: custom-color("kcolorscheme", "inactive", "button", "background", "normal");
    --button-inactive-border-color: custom-color("kcolorscheme", "inactive", "button","decoration", "frame" );
    --button-inactive-highlight-color: mix(var(--button-inactive-background-color), var(--highlight-color), 0.5);
    --button-inactive-checked-color: mix(var(--button-inactive-background-color), var(--button-inactive-text-color), 0.2);

    --button-disabled-text-color: custom-color("kcolorscheme", "disabled", "window", "foreground", "text");
    --button-disabled-background-color: custom-color("kcolorscheme", "disabled", "window", "background", "normal");
    --button-disabled-border-color: custom-color("kcolorscheme", "disabled", "button", "decoration", "frame");

    --button-border: 1px solid var(--button-active-border-color);
    --button-border-highlight: 1px solid var(--button-active-border-highlight-color);
    --button-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
    --button-focus: 2px solid var(--button-active-focus-color);

    /* Values derived from Breeze QStyle metrics */
    --button-default-size: 32px; /* 16 + 2 * 6 + 2 * 2  */
    --button-padding: 8px; /* 6 + 2 */
    --button-spacing: 4px;

    --toolbutton-padding: 6px;
}

button,
toolbutton,
checkbox indicator,
checkdelegate indicator,
menuitem indicator,
radiobutton indicator,
radiodelegate indicator,
combobox,
roundbutton,
tabbutton
{
    width: var(--button-default-size);
    height: var(--button-default-size);
    spacing: var(--button-spacing);
    padding: var(--button-padding);
    border-radius: var(--corner-radius);

    text-alignment-horizontal: center;
    icon-alignment-horizontal: center;

    color: var(--button-active-text-color);
    border: var(--button-border);
    background-color: var(--button-active-background-color);

    &:hovered
    {
        border-color: var(--button-active-border-highlight-color);
    }

    &:visual-focus
    {
        border-color: var(--button-active-border-highlight-color);
        outline: var(--button-focus);
    }

    &:checked
    {
        background-color: var(--button-active-checked-color);
    }

    &:disabled
    {
        color: var(--button-disabled-text-color);
        background-color: var(--button-disabled-background-color);
        border-color: var(--button-disabled-border-color);
        box-shadow: none;
    }

    &[display="text-under-icon"] {
        text-alignment-vertical: stack;
        icon-alignment-vertical: stack;
    }
}

button,
roundbutton
{
    box-shadow: var(--button-shadow);
}

button:pressed,
toolbutton:pressed,
combobox:pressed,
roundbutton:pressed,
tabbutton:pressed
{
    border-color: var(--button-active-border-highlight-color);
    background-color: var(--button-active-highlight-color);
    box-shadow: none;
}

button:checked,
roundbutton:checked
{
    box-shadow: none;
}

toolbutton,
button.flat,
combobox.flat,
roundbutton.flat
{
    border: none;
    background: none;
    box-shadow: none;

    &:hovered {
        border: var(--button-border-highlight);
    }

    &:visual-focus {
        border: var(--button-border-highlight);
    }

    &:disabled {
        border: none;
        background: none;
    }

    &:pressed {
        border: var(--button-border-highlight);
        background-color: var(--button-active-highlight-color);
    }
}

toolbutton
{
    icon-size: var(--icon-size-smallmedium);
    padding: var(--toolbutton-padding);
}

roundbutton
{
    border-radius: var(--button-default-size);
}

combobox
{
    layout-alignment: content fill center 0;
    text-alignment: content fill center 0;
    icon-alignment: content end center 0;
    icon-name: "arrow-down-symbolic";
    box-shadow: var(--button-shadow);

    &.editable,
    &.flat.editable
    {
        background-color: var(--view-background-color);
        border: 1px solid var(--view-border-color);
        box-shadow: none;

        &:hovered {
            border-color: var(--button-active-border-highlight-color);
        }

        &:pressed {
            border-color: var(--button-active-border-highlight-color);
            icon-color: var(--button-active-border-highlight-color);
        }

        &:visual-focus {
            border-color: var(--button-active-border-highlight-color);
        }
    }
}

popup.combobox
{
    background-color: var(--view-background-color);
}

toolseparator {
    background-color: var(--button-active-border-color);

    .horizontal {
        width: var(--large-element-size);
        height: 1px;
        inset: 0px var(--small-spacing);
    }

    .vertical {
        width: 1px;
        height: var(--large-element-size);
        inset: var(--small-spacing) 0px;
    }
}

tabbutton {
    layout-alignment: content fill center 0;
    text-alignment: content fill center 0;
    icon-alignment: content end center 0;
    background-color: var(--window-background-color);
    &:checked
    {
        background-color: var(--window-background-color);
    }

    &[direction="north"] {
        /* shouldnt this be border-bottom-left? */
        border-top-left-radius: 0px;
        border-top-right-radius: 0px;
        border-bottom: 0px solid transparent;
        corners-bottom-left-color: transparent;
        corners-bottom-right-color: transparent;
        corners-bottom-left-width: 0px;
        corners-bottom-right-width: 0px;
        &:checked
        {
            border-top-width: 4px;
            border-top-color: var(--highlight-color);
        }
    }

    &[direction="south"] {
        border-bottom-left-radius: 0px;
        border-bottom-right-radius: 0px;
        border-top: 0px solid transparent;
        corners-top-left-color: transparent;
        corners-top-right-color: transparent;
        corners-top-left-width: 0px;
        corners-top-right-width: 0px;
        &:checked
        {
            border-bottom-width: 4px;
            border-bottom-color: var(--highlight-color);
        }
    }
}

tabbar {
    padding: var(--small-spacing);
    spacing: 0px;
}

